--- a/week-02/day-02/todo/src/App.css
+++ b/week-02/day-02/todo/src/App.css
@@ -1,6 +1,9 @@
-.background {
+/* .background {
   width: 100vw;
   height: 100vh;
   background-color: #50E3C1;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
