--- a/week-02/day-02/todo/src/components/TodoList/TodoList.css
+++ b/week-02/day-02/todo/src/components/TodoList/TodoList.css
@@ -2,14 +2,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 90%;
     height: 60%;
-    background-color: #f7f7f7;
+    overflow:scroll;
 }
-.item {
+.item {   
+    width: 89%; 
+    height: 20%;
     font-family: 'Lato', sans-serif;
-    font-size: 26px;
-    line-height: 2.2;
-    width: 80%;
-    height: 15%;
+    font-size: 30px;
+    line-height: 2.2; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.icon{
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+#deleteIcon{ 
+    font-size: inherit;
+}
+
+#deleteIcon:active {
+    color: red
 }
