--- a/player/music-player-frontend/src/components/Frame/Frame.css
+++ b/player/music-player-frontend/src/components/Frame/Frame.css
@@ -1,6 +1,8 @@
 .frame{
-  width: 80%;
-  height: 80%;
+  width: 1200px;
+  height: 650px;
+  /* width: 80%;
+  height: 80%; */
   background-color: beige;
 }
 .header{
