--- a/player/music-player-frontend/src/components/Player/Player.css
+++ b/player/music-player-frontend/src/components/Player/Player.css
@@ -21,7 +21,6 @@
   background-color: #FFF;
 }
 .TextInfoContainer{
-  /* background-color: #fff; */
   width: 100%;
   height: 100%;
   float: left;
@@ -30,10 +29,23 @@
   justify-content: space-evenly;
 }
 .playIcon{
-  height:100%;
+  height: 100%;
   width: 20%;
   font-size: 50px;
-  /* background-color: #FFF; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.centerIcon{
+  height:100%;
+  /* width: 60%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sideIcon{
+  height:100%;
+  width: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,8 +76,4 @@
 }
 #next{
   font-size: inherit;
-}
-#favoriteIcon{
-  position: relative;
-  right: 15px;
 }
